Fixes an po4a error where string is concatenated.

--- a/po4a.cfg
+++ b/po4a.cfg
@@ -1,4 +1,4 @@
 [po4a_langs] no
-[po4a_paths] translate/$master.po $lang:translate/$master.$lang.po
+[po4a_paths] translate/$master.po $lang:translate/$lang/$master.po
 
 [type: text] site/en/index.mdh $lang:site/$lang/index.mdh
